# ListaSpesa

./: CMakeLists.txt  MFdialog.cpp  MFdialog.h  MainFrame.cpp  MainFrame.h  Observer.h  README.md  ShoppingItem.cpp  ShoppingItem.h  ShoppingList.cpp  ShoppingList.h  Subject.h  Test.cpp  Test_shoppingitem.cpp  Test_shoppinglist.cpp  main.cpp
